# deluca-lung

./: .gitignore  README.md  setup.cfg
assets/bom/: bom.csv
assets/pcb/venti-zero/: eec.dcm  eec.lib  sym-lib-table  venti-zero-bom.csv  venti-zero-cache.lib  venti-zero-rescue.lib  venti-zero-top-pos.csv  venti-zero.kicad_pcb  venti-zero.kicad_pcb-bak  venti-zero.net  venti-zero.pro  venti-zero.sch  venti-zero.sch-bak  venti-zero.xml
assets/pcb/venti-zero/gerber/: venti-zero-B_CrtYd.gbr  venti-zero-B_Cu.gbr  venti-zero-B_Fab.gbr  venti-zero-B_Mask.gbr  venti-zero-B_SilkS.gbr  venti-zero-Edge_Cuts.gbr  venti-zero-F_CrtYd.gbr  venti-zero-F_Cu.gbr  venti-zero-F_Fab.gbr  venti-zero-F_Mask.gbr  venti-zero-F_SilkS.gbr  venti-zero-drl_map.ps  venti-zero.drl
assets/pcb/venti-zero/lib.pretty/: 1715721.kicad_mod  ADS1115.kicad_mod  ADS1115IDGSR.kicad_mod  MINI-P-Sensor-Horizontal.kicad_mod  Molex-206832-0601-MFG.kicad_mod  in8.kicad_mod  (+4 more)
assets/stl/: expiratory-right-angle v5.stl
deluca/lung/: __init__.py  core.py
deluca/lung/controllers/: __init__.py  _bang_bang.py  _expiratory.py  _impulse.py  _jax_pid.py  _periodic_impulse.py  _pid.py  _predestined.py  _residual_explorer.py
deluca/lung/devices/: hal.py
deluca/lung/environments/: __init__.py  _balloon_lung.py  _cnn.py  _delay_lung.py  _double_comp_lung.py  _double_comp_lung_pid.py  _linear.py  _lstm.py  _mlp.py  _physical_lung.py  _single_comp_lung.py  _single_comp_lung_pid.py  _stitched_sim.py
deluca/lung/utils/: __init__.py  core.py
demo/: 2021-07-18 controller demo.ipynb
pkls/: deep_controller.pkl  sim.pkl
(+31 files in other folders)
