[metadata]
name = deluca-lung
version = 0.0.5
author = Google AI Princeton
author_email = dsuo@google.com
url = https://github.com/MinRegret/deluca-lung
description = 
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
	differentiable
	control algorithms
	reinforcement learning
license = Apache License
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Development Status :: 3 - Alpha

[options]
packages = find_namespace:
install_requires = 
    deluca == 0.0.17
    numpy
    tqdm
    scipy
    sklearn
    matplotlib
    jupyter
    ipython
    pathos
    pigpio
    click
		tensorboard
    pandas
    jax
    flax
